[package]
name = "rs_concaveman"
description = "Rust wrapper for concaveman-cpp"
version = "1.0.4"
edition = "2021"
authors = ["Ronny Karlsson"]
license = "BSD-2-Clause"
repository = "https://github.com/TehGoat/rs_concaveman"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
robust-predicates = "0.1.*"
libc = "0.2.*"
rand = "0.8.1"

[build-dependencies]
cc = "1.0.*"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "concave_benchmark"
harness = false